# cppTest

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/in/: config.hpp.in
src/math/: CMakeLists.txt  my_math.hpp  my_sqrt.cpp
